fix: fix the cors setting at config